Updated testimonial section: circular logos inside rectangular cards with polished quotes

--- a/about.html
+++ b/about.html
@@ -105,14 +105,14 @@
             <h2>10+ Years of Legal Excellence</h2>
             <p>
               Founded over a decade ago, Musyoka and Mutinda Company Advocates
-              has established itself as a premier law firm in Machakos and
-              throughout Kenya. Our firm was built on the principle that
-              exceptional legal service should be accessible, personalized, and
-              results-driven.
+              has established itself as a premier law firm in Kenya.It has
+              Branches in Nairobi, Machakos Town and Wamunyu Town. Our firm was
+              built on the principle that exceptional legal service should be
+              accessible, personalized, and results-driven.
             </p>
             <p>
               Over the years, we have grown from a small practice to a respected
-              firm with seven dedicated legal experts, each specializing in
+              firm with eight dedicated legal experts, each specializing in
               different areas of law to provide comprehensive legal solutions to
               our clients.
             </p>
@@ -154,9 +154,9 @@
             </div>
             <h2>Our Vision</h2>
             <p>
-              To be the leading law firm in Eastern Kenya, recognized for our
-              legal expertise, ethical practice, and commitment to justice. We
-              aim to set the standard for excellence in legal representation and
+              To be the leading law firm in Kenya, recognized for our legal
+              expertise, ethical practice, and commitment to justice. We aim to
+              set the standard for excellence in legal representation and
               community service.
             </p>
           </div>
@@ -300,7 +300,9 @@
               <h3>Team Growth</h3>
               <p>
                 We welcomed three additional advocates to our team, allowing us
-                to handle more complex cases and serve a larger client base.
+                to handle more complex cases and serve a larger client base. It
+                is during this time that we added two branches in Nairobi and
+                Wamunyu Town.
               </p>
             </div>
           </div>
