--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 loading="lazy"
               />
               <div class="service-content">
-                <h3>Litigation & Dispute Resolution</h3>
+                <h3>Litigation</h3>
                 <p>
                   Expert representation in civil and commercial litigation with
                   strong outcomes.
@@ -284,17 +284,17 @@
             <div class="swiper-slide service-card" data-category="corporate">
               <img
                 src="https://images.unsplash.com/photo-1521791055366-0d553872125f?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjN8fGxlZ2FsfGVufDB8fDB8fHww"
-                alt="Business & Insurance Law"
+                alt="Banking & Insurance Law"
                 class="service-img"
                 loading="lazy"
               />
               <div class="service-content">
-                <h3>Business & Insurance Law</h3>
+                <h3>Banking & Insurance Law</h3>
                 <p>
                   Legal support for contracts, compliance, insurance disputes,
                   and liability.
                 </p>
-                <a href="services.html#corporate" class="service-btn"
+                <a href="services.html#banking" class="service-btn"
                   >Learn More</a
                 >
               </div>
@@ -435,7 +435,7 @@
                   Representing unions, employers, and workers in labor law
                   cases.
                 </p>
-                <a href="services.html#corporate" class="service-btn"
+                <a href="services.html#industrial" class="service-btn"
                   >Learn More</a
                 >
               </div>
@@ -456,9 +456,10 @@
             <h1 class="section-title">10+ Years of Legal Excellence</h1>
             <p>
               Founded over a decade ago, Musyoka and Mutinda Company Advocates
-              has established itself as a premier law firm in Machakos and
-              throughout Kenya. Our team of seven dedicated legal experts brings
-              a wealth of knowledge and strategic approach to every case.
+              has established itself as a premier law firm in Kenya.It has
+              Branches in Nairobi, Machakos Town and Wamunyu Town. Our team of
+              eight dedicated legal experts brings a wealth of knowledge and
+              strategic approach to every case.
             </p>
             <p>
               With 1000+ cases successfully handled, we have the experience and
@@ -473,7 +474,7 @@
                 <span class="stat-label">Years Experience</span>
               </div>
               <div class="stat-item">
-                <span class="stat-number" data-target="7">0</span>
+                <span class="stat-number" data-target="8">0</span>
                 <span class="stat-label">Legal Experts</span>
               </div>
               <div class="stat-item">
@@ -550,88 +551,109 @@
     <!-- Testimonials Section -->
     <!-- Trusted Clients Section -->
     <h1 class="section-title">Trusted by Clients Across Kenya</h1>
+
     <section class="section trusted-clients" id="clients">
       <div class="container">
         <!-- Swiper -->
         <div class="swiper clientsSwiper">
           <div class="swiper-wrapper">
-            <!-- Each slide (company logo) -->
+            <!-- Testimonial 1 -->
             <div class="swiper-slide">
-              <img src="ACTEA logo.png" alt="Safaricom" />
+              <div class="client-card">
+                <div class="logo-wrapper">
+                  <img src="ACTEA logo.png" alt="ACTEA" class="client-logo" />
+                </div>
+                <p class="testimonial-quote">
+                  “Musyoka & Mutinda guided us seamlessly through our legal
+                  challenges. Truly professional! Their team demonstrated
+                  exceptional expertise, providing timely advice and practical
+                  solutions that ensured our matters were handled efficiently
+                  and confidently.”
+                </p>
+              </div>
             </div>
+
+            <!-- Testimonial 2 -->
             <div class="swiper-slide">
-              <img src="millenium williams academy.jpg" alt="Equity Bank" />
+              <div class="client-card">
+                <div class="logo-wrapper">
+                  <img
+                    src="millenium williams academy.jpg"
+                    alt="Millenium Williams Academy"
+                    class="client-logo"
+                  />
+                </div>
+                <p class="testimonial-quote">
+                  “Their advice was clear, precise, and helped us achieve our
+                  objectives. Musyoka & Mutinda provide practical legal
+                  solutions that empower our organization to make confident,
+                  informed decisions.”
+                </p>
+              </div>
             </div>
+
+            <!-- Testimonial 3 -->
             <div class="swiper-slide">
-              <img src="plum plus logo.jpg" alt="KCB Bank" />
+              <div class="client-card">
+                <div class="logo-wrapper">
+                  <img
+                    src="plum plus logo.jpg"
+                    alt="Plum Plus"
+                    class="client-logo"
+                  />
+                </div>
+                <p class="testimonial-quote">
+                  “Excellent service! We always feel supported and understood.
+                  Musyoka & Mutinda take the time to listen, provide clear
+                  guidance, and ensure our legal matters are handled efficiently
+                  and professionally.”
+                </p>
+              </div>
             </div>
+
+            <!-- Testimonial 4 -->
             <div class="swiper-slide">
-              <img src="coexilion logo.png" alt="Co-op Bank" />
+              <div class="client-card">
+                <div class="logo-wrapper">
+                  <img
+                    src="coexilion logo.png"
+                    alt="Coexilion"
+                    class="client-logo"
+                  />
+                </div>
+                <p class="testimonial-quote">
+                  “Professional, efficient, and highly reliable advocates.
+                  Musyoka & Mutinda consistently deliver top-notch legal
+                  support, ensuring our business decisions are well-informed and
+                  risk-free.”
+                </p>
+              </div>
             </div>
+
+            <!-- Testimonial 5 -->
             <div class="swiper-slide">
-              <img src="tuungane logo.png" alt="Kenya Power" />
+              <div class="client-card">
+                <div class="logo-wrapper">
+                  <img
+                    src="tuungane logo.png"
+                    alt="Tuungane"
+                    class="client-logo"
+                  />
+                </div>
+                <p class="testimonial-quote">
+                  “We trust Musyoka & Mutinda for all our corporate legal
+                  matters. Their team consistently provides clear guidance,
+                  timely advice, and practical solutions that help our company
+                  operate confidently and compliantly in Kenya’s business
+                  environment.”
+                </p>
+              </div>
             </div>
-            <!--  <div class="swiper-slide">
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/b/ba/Britam_logo.svg"
-                alt="Britam"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/3/33/Kenya_Airways_Logo.svg"
-                alt="Kenya Airways"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/8/86/Bidco_Africa_logo.png"
-                alt="Bidco"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/1/1f/Nation_Media_Group_Logo.png"
-                alt="Nation Media"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Safaricom_M-PESA_logo.svg"
-                alt="M-Pesa"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/6/68/ICDC_logo.png"
-                alt="ICDC"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/2/22/Brookside_Dairy_Logo.png"
-                alt="Brookside"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/9/90/Kenya_Ports_Authority_Logo.png"
-                alt="KPA"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/c/c6/Chandaria_Industries_logo.png"
-                alt="Chandaria"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/e/e5/Safaricom_Foundation_logo.png"
-                alt="Safaricom Foundation"
-              />
-            </div>-->
           </div>
+
+          <!-- Swiper navigation -->
+          >
+          <div class="swiper-pagination"></div>
         </div>
       </div>
     </section>
@@ -768,8 +790,8 @@
               </li>
               <li>
                 <i class="fas fa-envelope"></i
-                ><a href="mailto:info@musyokaandmutindaadv.co.ke">
-                  info@musyokaandmutindaadv.co.ke</a
+                ><a href="mailto:info@musyokamutindaadv.co.ke">
+                  info@musyokamutindaadv.co.ke</a
                 >
               </li>
             </ul>
@@ -816,6 +838,24 @@
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script>
+      const swiper = new Swiper(".clientsSwiper", {
+        loop: true,
+        slidesPerView: 3,
+        spaceBetween: 30,
+        pagination: { el: ".swiper-pagination", clickable: true },
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+        breakpoints: {
+          320: { slidesPerView: 1, spaceBetween: 20 },
+          640: { slidesPerView: 2, spaceBetween: 20 },
+          1024: { slidesPerView: 3, spaceBetween: 30 },
+        },
+      });
+    </script>
     <script src="index.js"></script>
   </body>
 </html>
