--- a/services.html
+++ b/services.html
@@ -112,7 +112,7 @@
           <p>
             With over 10 years of experience, our firm offers a wide range of
             legal services tailored to meet your specific needs. Our team of
-            seven dedicated legal experts provides strategic counsel and robust
+            eight dedicated legal experts provides strategic counsel and robust
             representation across various practice areas.
           </p>
         </div>
@@ -181,6 +181,33 @@
                 fair justice, and ensure due process.
               </p>
               <a href="services.html#criminal" class="btn btn-outline"
+                >Learn More</a
+              >
+            </div>
+
+            <!-- Service Card 5.1 -->
+            <div class="swiper-slide service-card">
+              <div class="service-icon"><i class="fas fa-gavel"></i></div>
+              <h3>Indusrial, Unions & Employment Law</h3>
+              <p>
+                Legal Counsel on Contract Provisions,Pay, WhistleBlowing,Unfair
+                Dismissal, Flexible Working, Family Leave and Redundancy
+              </p>
+              <a href="services.html#industrial" class="btn btn-outline"
+                >Learn More</a
+              >
+            </div>
+
+            <!-- Service Card 5.2 -->
+            <div class="swiper-slide service-card">
+              <div class="service-icon"><i class="fas fa-gavel"></i></div>
+              <h3>Banking & Insurance Law</h3>
+              <p>
+                We offer legal counsel on financial servicesregulation guiding
+                clients on regulatory compliance, transactional report &
+                strategic litigation defense
+              </p>
+              <a href="services.html#banking" class="btn btn-outline"
                 >Learn More</a
               >
             </div>
@@ -474,6 +501,10 @@
                     <i class="fas fa-check feature-icon"></i
                     ><span>Succession disputes and inheritance claims</span>
                   </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Women Rights,FGM and GBV Cases</span>
+                  </div>
                 </div>
               </div>
               <a href="contact.html" class="btn"
@@ -553,8 +584,173 @@
             <div class="service-sidebar">
               <h4>Related Services</h4>
               <ul class="service-categories">
-                <li><a href="#litigation">Court Representation</a></li>
+                <li><a href="#corporate">Corporate Law</a></li>
                 <li><a href="#human-rights">Human Rights Protection</a></li>
+              </ul>
+              <h4>Emergency Legal Help</h4>
+              <p>
+                <strong>Call:</strong> +254716464683 for immediate legal
+                assistance.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Industrial Relations,Unions & Employment Law -->
+        <div class="service-detail" id="industrial">
+          <div class="service-header">
+            <div class="service-header-icon">
+              <i class="fas fa-shield-alt"></i>
+            </div>
+            <div>
+              <h2>Industrial Relations,Unions & Employment Law</h2>
+              <p>
+                Protecting the Relationship between Workers,Employees,Trade
+                Unions and the government
+              </p>
+            </div>
+          </div>
+          <div class="service-content">
+            <div>
+              <p>
+                We provide strategic and comprehensive legal Services around
+                Contract Provisions,Pay, WhistleBlowing,Unfair Dismissal,
+                Flexible Working, Family Leave and Redundancy
+              </p>
+              <div class="service-features">
+                <h4>Our Labor Laws Services Include:</h4>
+                <div class="features-grid">
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Unfair Dismissal & Unlawful Deductions</span>
+                  </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span> Collective Bargaining Negotiations</span>
+                  </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Union Avoidance & Campaign Management</span>
+                  </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Managing Indusrial Action</span>
+                  </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Health & Safety Compliance</span>
+                  </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Hiring,Firing & Discipline</span>
+                  </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Discrimination & Harassment Defense</span>
+                  </div>
+
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>WorkPlace Compliance Audits</span>
+                  </div>
+
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Labour Courts & Tribunals</span>
+                  </div>
+                </div>
+              </div>
+              <a href="contact.html" class="btn">Get Urgent Legal Support</a>
+            </div>
+            <div class="service-sidebar">
+              <h4>Related Services</h4>
+              <ul class="service-categories">
+                <li><a href="#corporate">Corporate & Commercial Law</a></li>
+                <li><a href="#human-rights">Human Rights Protection</a></li>
+              </ul>
+              <h4>Emergency Legal Help</h4>
+              <p>
+                <strong>Call:</strong> +254716464683 for immediate legal
+                assistance.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!--  Banking & Insurance Law -->
+        <div class="service-detail" id="banking">
+          <div class="service-header">
+            <div class="service-header-icon">
+              <i class="fas fa-shield-alt"></i>
+            </div>
+            <div>
+              <h2>Banking & Insurance Law</h2>
+              <p>Legal Counsel for Banking and Insurance Sectors</p>
+            </div>
+          </div>
+          <div class="service-content">
+            <div>
+              <p>
+                We provide strategic and specialized Financial Services
+                Regulation Counsel. We guide our clients through the highly
+                complex continuosly evolving Banking amd Insurance Law.
+              </p>
+              <div class="service-features">
+                <h4>Our Banking & Insurance Services Include:</h4>
+                <div class="features-grid">
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Regulatory Compliance & Licensing</span>
+                  </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Mergers & Acquistions in the Financial Sector</span>
+                  </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Consumer Finance & Lending</span>
+                  </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Fintech & Innovation</span>
+                  </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Anti-Money Laundering(AML) & Sanctions</span>
+                  </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Policy Drafting & Interpretation</span>
+                  </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Policy Drafting & Interpretation</span>
+                  </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Regulatory & Market Compliance</span>
+                  </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Corporate Governance for Insurers</span>
+                  </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Bad Faith Litigation Defense</span>
+                  </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Reinsurance Transactions & Disputes</span>
+                  </div>
+                </div>
+              </div>
+              <a href="contact.html" class="btn">Get Urgent Legal Support</a>
+            </div>
+            <div class="service-sidebar">
+              <h4>Related Services</h4>
+              <ul class="service-categories">
+                <li><a href="#corporate">Corporate & Commercial Law</a></li>
+                <li><a href="#industrial">Industrial & Employment Law</a></li>
               </ul>
               <h4>Emergency Legal Help</h4>
               <p>
@@ -612,9 +808,14 @@
                       practices</span
                     >
                   </div>
+
                   <div class="feature-item">
                     <i class="fas fa-check feature-icon"></i
                     ><span>Constitutional compliance advisory</span>
+                  </div>
+                  <div class="feature-item">
+                    <i class="fas fa-check feature-icon"></i
+                    ><span>Personal Injury & Claims</span>
                   </div>
                 </div>
               </div>
@@ -705,10 +906,13 @@
           </div>
           <div class="faq-answer">
             <p>
-              You can schedule a consultation by calling us at +254716464683,
-              emailing info@musyokamutindaadv.co.ke, or using the contact form
-              on our website. We typically respond within 24 hours to arrange a
-              meeting at our office or via video conference.
+              You can schedule a consultation by calling us at
+              <a href="tel:+254716464683">+254716464683</a>, emailing
+              <a href="mailto:info@musyokamutindaadv.co.ke"
+                >info@musyokamutindaadv.co.ke</a
+              >, or using the contact form on our website. We typically respond
+              within 24 hours to arrange a meeting at our office or via video
+              conference.
             </p>
           </div>
         </div>
@@ -731,15 +935,19 @@
 
         <div class="faq-item">
           <div class="faq-question">
-            <span>Do you offer legal services outside of Machakos?</span>
+            <span
+              >Do you offer legal services outside of Nairobi, Machakos and
+              Wamunyu Town?</span
+            >
             <i class="fas fa-chevron-down faq-toggle"></i>
           </div>
           <div class="faq-answer">
             <p>
-              Yes, while our physical office is located in Machakos, we
-              represent clients throughout Kenya. Our advocates are licensed to
-              practice in all Kenyan courts and tribunals. We also utilize
-              technology to serve clients remotely when appropriate.
+              Yes, while our physical offices are located in Nairobi, Machakos
+              and Wamunyu Town we represent clients throughout Kenya. Our
+              advocates are licensed to practice in all Kenyan courts and
+              tribunals. We also utilize technology to serve clients remotely
+              when appropriate.
             </p>
           </div>
         </div>
