--- a/single-post.html
+++ b/single-post.html
@@ -67,7 +67,7 @@
       <div class="article-content">
         <div class="article-header">
           <div class="article-meta">
-            <span>By Naomi --mutindamaroon, Esq.</span>
+            <span>By Faith Musyoka, Adv.</span>
             <span>May 15, 2019</span>
             <span class="article-category">Contract Law</span>
           </div>
