--- a/team.html
+++ b/team.html
@@ -182,11 +182,11 @@
               <div class="structure-member">
                 <div class="structure-image">
                   <img
-                    src="WhatsApp Image 2025-11-30 at 12.11.28_c41b2637..jpg"
+                    src="https://mail.google.com/mail/u/0?ui=2&ik=8554c57a02&attid=0.1&permmsgid=msg-f:1850781555145507420&th=19af4c04bf4b025c&view=fimg&fur=ip&permmsgid=msg-f:1850781555145507420&sz=s0-l75-ft&attbid=ANGjdJ-bCGbLx3v0cSXtUrvu8UIMjiSBly-A9LstGgGhkXwK386bHyj00_7Hyby8eMiNVr-bWeH4Zls3Iqw3O2_2yXGYkfckBjXTIekeKYK-vr18LwJAbXAleDTYEbE&disp=emb&realattid=ii_19af4c00657dacc62d01&zw"
                     alt="Eleazor"
                   />
                 </div>
-                <h3 class="structure-name">Eleazor</h3>
+                <h3 class="structure-name">Eleazer Kokonya</h3>
                 <p class="structure-role">Legal Consultant</p>
                 <p class="structure-desc">
                   Provides essential support in legal research and client
@@ -369,12 +369,12 @@
           <div class="team-member">
             <div class="member-image">
               <img
-                src="WhatsApp Image 2025-11-30 at 12.11.28_c41b2637..jpg"
+                src="https://mail.google.com/mail/u/0?ui=2&ik=8554c57a02&attid=0.1&permmsgid=msg-f:1850781555145507420&th=19af4c04bf4b025c&view=fimg&fur=ip&permmsgid=msg-f:1850781555145507420&sz=s0-l75-ft&attbid=ANGjdJ-bCGbLx3v0cSXtUrvu8UIMjiSBly-A9LstGgGhkXwK386bHyj00_7Hyby8eMiNVr-bWeH4Zls3Iqw3O2_2yXGYkfckBjXTIekeKYK-vr18LwJAbXAleDTYEbE&disp=emb&realattid=ii_19af4c00657dacc62d01&zw"
                 alt="Eleazor"
               />
             </div>
             <div class="member-info">
-              <h3 class="member-name">Eleazer</h3>
+              <h3 class="member-name">Eleazer Kokonya</h3>
               <p class="member-position">Legal Consultant</p>
               <p class="member-bio">
                 Specializing in real estate law, Eleazor brings extensive
