Update project files

--- a/about.html
+++ b/about.html
@@ -172,26 +172,8 @@
           <div class="team-member">
             <div class="member-image">
               <img
-                src="WhatsApp Image 2025-12-04 at 00.44.36_bcc6b2ad.jpg"
-                alt="Advocate Musyoka"
-              />
-            </div>
-            <div class="member-info">
-              <h3 class="member-name">Adv. Faith Musyoka</h3>
-              <p class="member-position">Managing Partner</p>
-              <p class="member-bio">
-                Specializing in commercial law and real estate, Advocate Musyoka
-                has built a reputation for meticulous preparation and successful
-                negotiation. She graduated with honors from Moi University
-                School of Law and has been practicing since 2011.
-              </p>
-            </div>
-          </div>
-          <div class="team-member">
-            <div class="member-image">
-              <img
                 src="https://media.licdn.com/dms/image/v2/D4D16AQFwSSbxAFJSaA/profile-displaybackgroundimage-shrink_200_800/profile-displaybackgroundimage-shrink_200_800/0/1676964499754?e=1766016000&v=beta&t=HT--JEdPvgZCDdhmxgtW8r2pcrq9SYc6rDz1v2OtI1U"
-                alt="Advocate Mutinda"
+                alt="Naomi Mutinda– Partner at Musyoka & Mutinda Company Advocates"
               />
             </div>
             <div class="member-info">
@@ -206,6 +188,25 @@
               </p>
             </div>
           </div>
+          <div class="team-member">
+            <div class="member-image">
+              <img
+                src="WhatsApp Image 2025-12-04 at 00.44.36_bcc6b2ad.jpg"
+                alt="Faith Musyoka– Partner at Musyoka & Mutinda Company Advocates"
+              />
+            </div>
+            <div class="member-info">
+              <h3 class="member-name">Adv. Faith Musyoka</h3>
+              <p class="member-position">Partner</p>
+              <p class="member-bio">
+                Specializing in commercial law and real estate, Advocate Musyoka
+                has built a reputation for meticulous preparation and successful
+                negotiation. She graduated with honors from Moi University
+                School of Law and has been practicing since 2011.
+              </p>
+            </div>
+          </div>
+          
         </div>
         <div style="text-align: center; margin-top: 40px">
           <a href="team.html" class="btn">View Full Team</a>
@@ -418,8 +419,8 @@
               </li>
               <li>
                 <i class="fas fa-envelope"></i
-                ><a href="mailto:info@musyokamutindaadv.co.ke">
-                  info@musyokamutindaadv.co.ke</a
+                ><a href="mailto:musyokamutindaadv@yahoo.com">
+                  musyokamutindaadv@yahoo.com</a
                 >
               </li>
             </ul>
