--- a/blog.html
+++ b/blog.html
@@ -458,7 +458,7 @@
               </p>
 
               <form
-                action="https://formsubmit.co/info@musyokamutindaadv.co.ke"
+                action="https://formsubmit.co/musyokamutindaadv@yahoo.com"
                 method="POST"
                 class="newsletter-form"
               >
@@ -580,8 +580,8 @@
               </li>
               <li>
                 <i class="fas fa-envelope"></i
-                ><a href="mailto:info@musyokamutindaadv.co.ke">
-                  info@musyokamutindaadv.co.ke</a
+                ><a href="mailto:musyokamutindaadv@yahoo.com">
+                  musyokamutindaadv@yahoo.com</a
                 >
               </li>
             </ul>
