--- a/contact.html
+++ b/contact.html
@@ -151,7 +151,7 @@
               <p><strong></strong></p>
             </div>
             <a
-              href="mailto:info@musyokamutindaadv.co.ke"
+              href="mailto:musyokamutindaadv@yahoo.com"
               class="btn btn-primary"
               >Send Email</a
             >
@@ -323,8 +323,8 @@
               </div>
               <div class="info-content">
                 <h3>Email Address</h3>
-                <a href="mailto:info@musyokamutindaadv.co.ke"
-                  >info@musyokamutindaadv.co.ke
+                <a href="mailto:musyokamutindaadv@yahoo.com"
+                  >musyokamutindaadv@yahoo.com
                 </a>
               </div>
             </div>
@@ -567,8 +567,8 @@
               </li>
               <li>
                 <i class="fas fa-envelope"></i
-                ><a href="mailto:info@musyokamutindaadv.co.ke">
-                  info@musyokamutindaadv.co.ke</a
+                ><a href="mailto:musyokamutindaadv@yahoo.com">
+                  musyokamutindaadv@yahoo.com</a
                 >
               </li>
             </ul>
