--- a/index.html
+++ b/index.html
@@ -707,9 +707,9 @@
               <h2>Email</h2>
               <p>
                 <a
-                  href="mailto:info@musyokamutindaadv.co.ke"
+                  href="mailto:musyokamutindaadv@yahoo.com"
                   class="contact-link"
-                  >info@musyokamutindaadv.co.ke</a
+                  >musyokamutindaadv@yahoo.com</a
                 >
               </p>
             </div>
@@ -790,8 +790,8 @@
               </li>
               <li>
                 <i class="fas fa-envelope"></i
-                ><a href="mailto:info@musyokamutindaadv.co.ke">
-                  info@musyokamutindaadv.co.ke</a
+                ><a href="mailto:musyokamutindaadv@yahoo.com">
+                  musyokamutindaadv@yahoo.com</a
                 >
               </li>
             </ul>
