--- a/services.html
+++ b/services.html
@@ -307,7 +307,7 @@
               <h4>Need Immediate Assistance?</h4>
               <p>Contact us for urgent legal matters:</p>
               <p><strong>Phone:</strong> +254716464683</p>
-              <p><strong>Email:</strong> info@musyokamutindaadv.co.ke</p>
+              <p><strong>Email:</strong> musyokamutindaadv@yahoo.com</p>
             </div>
           </div>
         </div>
@@ -908,8 +908,8 @@
             <p>
               You can schedule a consultation by calling us at
               <a href="tel:+254716464683">+254716464683</a>, emailing
-              <a href="mailto:info@musyokamutindaadv.co.ke"
-                >info@musyokamutindaadv.co.ke</a
+              <a href="mailto:musyokamutindaadv@yahoo.com"
+                >musyokamutindaadv@yahoo.com</a
               >, or using the contact form on our website. We typically respond
               within 24 hours to arrange a meeting at our office or via video
               conference.
@@ -1056,8 +1056,8 @@
               </li>
               <li>
                 <i class="fas fa-envelope"></i
-                ><a href="mailto:info@musyokamutindaadv.co.ke">
-                  info@musyokamutindaadv.co.ke</a
+                ><a href="mailto:musyokamutindaadv@yahoo.com">
+                  musyokamutindaadv@yahoo.com</a
                 >
               </li>
             </ul>
