--- a/single-post.html
+++ b/single-post.html
@@ -400,8 +400,8 @@
               </li>
               <li>
                 <i class="fas fa-envelope"></i
-                ><a href="mailto:info@musyokamutindaadv.co.ke">
-                  info@musyokamutindaadv.co.ke</a
+                ><a href="mailto:musyokamutindaadv@yahoo.com">
+                  musyokamutindaadv@yahoo.com</a
                 >
               </li>
             </ul>
