Add fully styled About section with Swiper slider

--- a/faith-musyoka.html
+++ b/faith-musyoka.html
@@ -127,7 +127,7 @@
   <header>
     <div class="header-container">
       <a href="..//" class="logo" aria-label="Musyoka & Mutinda Advocates Home">
-        <img src="final logo.png" 
+        <img src="final logo.webp" 
              alt="Musyoka & Mutinda Company Advocates Logo - Legal Services in Machakos Kenya" 
              width="200" 
              height="60"
@@ -359,7 +359,7 @@
       <div class="footer-content">
         <div class="footer-about">
           <a href="..//" class="footer-logo" aria-label="Musyoka & Mutinda Advocates Home">
-            <img src="final logo.png" 
+            <img src="final logo.webp" 
                  alt="Musyoka & Mutinda Company Advocates Logo" 
                  width="150" 
                  height="45" 
