--- a/naomi-mutinda.html
+++ b/naomi-mutinda.html
@@ -125,7 +125,7 @@
   <header>
     <div class="container header-container">
       <a href="..//" class="logo" aria-label="Musyoka & Mutinda Advocates Home">
-        <img src="final logo.png" alt="Musyoka & Mutinda Company Advocates Logo - Legal Services in Machakos Kenya" width="200" height="60" />
+        <img src="final logo.webp" alt="Musyoka & Mutinda Company Advocates Logo - Legal Services in Machakos Kenya" width="200" height="60" />
       </a>
 
       <nav aria-label="Main navigation">
@@ -283,7 +283,7 @@
       <div class="footer-content">
         <div class="footer-about">
           <a href="/" class="footer-logo" aria-label="Musyoka & Mutinda Advocates Home">
-            <img src="final logo.png" alt="Musyoka & Mutinda Company Advocates Logo" width="150" height="45" loading="lazy" />
+            <img src="final logo.webp" alt="Musyoka & Mutinda Company Advocates Logo" width="150" height="45" loading="lazy" />
           </a>
           <p>
             Providing exceptional legal services in Machakos and throughout
