--- a/services.html
+++ b/services.html
@@ -80,7 +80,7 @@
       <div class="container header-container">
         <a href="/" class="logo">
           <img
-            src="final logo.png"
+            src="final logo.webp"
             alt="Musyoka & Mutinda Advocates Logo"
             class="logo-img"
           />
@@ -1004,7 +1004,7 @@
           <div class="footer-about">
             <a href="/" class="footer-logo">
               <img
-                src="final logo.png"
+                src="final logo.webp"
                 alt="Musyoka & Mutinda Advocates Logo"
               />
             </a>
@@ -1078,7 +1078,7 @@
         </div>
         <div class="copyright">
           <p>
-            &copy; 2025 Musyoka & Mutinda Company Advocates. All Rights
+            &copy; 2026 Musyoka & Mutinda Company Advocates. All Rights
             Reserved.
           </p>
           <p class="credit">
