--- a/single-post.html
+++ b/single-post.html
@@ -529,7 +529,7 @@
           <div class="footer-about">
             <a href="/" class="footer-logo">
               <img
-                src="final logo.png"
+                src="final logo.webp"
                 alt="Musyoka & Mutinda Advocates Logo"
               />
             </a>
@@ -603,7 +603,7 @@
         </div>
         <div class="copyright">
           <p>
-            &copy; 2025 Musyoka & Mutinda Company Advocates. All Rights
+            &copy; 2026 Musyoka & Mutinda Company Advocates. All Rights
             Reserved.
           </p>
           <p class="credit">
