--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
       <div class="container header-container">
         <a href="/" class="logo">
           <img
-            src="final logo.png"
+            src="final logo.webp"
             alt="Musyoka & Mutinda Advocates Logo"
             class="logo-img"
           />
@@ -141,7 +141,7 @@
             <a href="contact.html" class="btn">Contact Us Today</a>
           </div>
           <div class="about-image">
-            <img src="final logo.png" alt="Our Office" />
+            <img src="final logo.webp" alt="Our Office" />
           </div>
         </div>
       </div>
@@ -369,7 +369,7 @@
           <div class="footer-about">
             <a href="/" class="footer-logo">
               <img
-                src="final logo.png"
+                src="final logo.webp"
                 alt="Musyoka & Mutinda Advocates Logo"
               />
             </a>
@@ -443,7 +443,7 @@
         </div>
         <div class="copyright">
           <p>
-            &copy; 2025 Musyoka & Mutinda Company Advocates. All Rights
+            &copy; 2026 Musyoka & Mutinda Company Advocates. All Rights
             Reserved.
           </p>
           <p class="credit">
