--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
       <div class="container header-container">
         <a href="/" class="logo">
           <img
-            src="final logo.png"
+            src="final logo.webp"
             alt="Musyoka & Mutinda Advocates Logo"
             class="logo-img"
           />
@@ -513,7 +513,7 @@
           <div class="footer-about">
             <a href="/" class="footer-logo">
               <img
-                src="final logo.png"
+                src="final logo.webp"
                 alt="Musyoka & Mutinda Advocates Logo"
               />
             </a>
@@ -587,7 +587,7 @@
         </div>
         <div class="copyright">
           <p>
-            &copy; 2025 Musyoka & Mutinda Company Advocates. All Rights
+            &copy; 2026 Musyoka & Mutinda Company Advocates. All Rights
             Reserved.
           </p>
           <p class="credit">
