--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="container header-container">
         <a href="/" class="logo">
           <img
-            src="final logo.png"
+            src="final logo.webp"
             alt="Musyoka & Mutinda Advocates Logo"
             class="logo-img"
           />
@@ -735,7 +735,7 @@
           <div class="footer-about">
             <a href="/" class="footer-logo">
               <img
-                src="final logo.png"
+                src="final logo.webp"
                 alt="Musyoka & Mutinda Advocates Logo"
               />
             </a>
@@ -809,7 +809,7 @@
         </div>
         <div class="copyright">
           <p>
-            &copy; 2025 Musyoka & Mutinda Company Advocates. All Rights
+            &copy; 2026 Musyoka & Mutinda Company Advocates. All Rights
             Reserved.
           </p>
           <p class="credit">
