--- a/team.html
+++ b/team.html
@@ -195,7 +195,7 @@
       <div class="container header-container">
         <a href="/" class="logo">
           <img
-            src="final logo.png"
+            src="final logo.webp"
             alt="Musyoka & Mutinda Advocates Logo"
             class="logo-img"
           />
@@ -298,7 +298,7 @@
               <div class="structure-member">
                 <div class="structure-image">
                   <img
-                    src="WhatsApp Image 2025-12-04 at 01.34.03_0ec70545.jpg"
+                    src="WhatsApp Image 2025-12-04 at 01.34.03_0ec70545.webp"
                     alt="Jerusha Muthoki – Senior Associate at Musyoka & Mutinda Company Advocates"
                   />
                 </div>
@@ -336,7 +336,7 @@
               <div class="structure-member">
                 <div class="structure-image">
                   <img
-                    src="WhatsApp Image 2025-12-06 at 20.39.08_8a210b7d.jpg"
+                    src="WhatsApp Image 2025-12-06 at 20.39.08_8a210b7d.webp"
                     alt="Eleazor Kokonya - Legal Consultant at Musyoka & Mutinda Company Advocates"
                   />
                 </div>
@@ -359,7 +359,7 @@
               <div class="structure-member">
                 <div class="structure-image">
                   <img
-                    src="WhatsApp Image 2025-11-30 at 12.09.13_f8063a86.jpg"
+                    src="WhatsApp Image 2025-11-30 at 12.09.13_f8063a86.webp"
                     alt="Everlyne Muia – Executive Administrative Assistant at Musyoka & Mutinda Company Advocates"
                   />
                 </div>
@@ -381,7 +381,7 @@
               <div class="structure-member">
                 <div class="structure-image">
                   <img
-                    src="WhatsApp Image 2025-12-04 at 01.33.11_5a6d138f.jpg"
+                    src="WhatsApp Image 2025-12-04 at 01.33.11_5a6d138f.webp"
                     alt="Irene Ajabu – Office Administrator at Musyoka & Mutinda Company Advocates"
                   />
                 </div>
@@ -396,7 +396,7 @@
               <div class="structure-member">
                 <div class="structure-image">
                   <img
-                    src="WhatsApp Image 2025-12-03 at 20.41.14_2b52efc3.jpg"
+                    src="WhatsApp Image 2025-12-03 at 20.41.14_2b52efc3.webp"
                     alt="Christine Kamuvya – Office Administrator at Musyoka & Mutinda Company Advocates"
                   />
                 </div>
@@ -479,7 +479,7 @@
           <div class="team-member" id="jerusha-muthoki">
             <div class="member-image">
               <img
-                src="WhatsApp Image 2025-12-04 at 01.34.03_0ec70545.jpg"
+                src="WhatsApp Image 2025-12-04 at 01.34.03_0ec70545.webp"
                 alt="Jerusha Muthoki – Senior Associate at Musyoka & Mutinda Company Advocates"
               />
             </div>
@@ -529,7 +529,7 @@
           <div class="team-member" id="eleazor-kokonya">
             <div class="member-image">
               <img
-                src="WhatsApp Image 2025-12-06 at 20.39.08_8a210b7d.jpg"
+                src="WhatsApp Image 2025-12-06 at 20.39.08_8a210b7d.webp"
                 alt="Eleazor Kokonya - Legal Consultant at Musyoka & Mutinda Company Advocates"
               />
             </div>
@@ -554,7 +554,7 @@
           <div class="team-member" id="everlyne-muia">
             <div class="member-image">
               <img
-                src="WhatsApp Image 2025-11-30 at 12.09.13_f8063a86.jpg"
+                src="WhatsApp Image 2025-11-30 at 12.09.13_f8063a86.webp"
                 alt="Everlyne Muia – Executive Administrative Assistant at Musyoka & Mutinda Company Advocates"
               />
             </div>
@@ -581,7 +581,7 @@
           <div class="team-member" id="irene-ajabu">
             <div class="member-image">
               <img
-                src="WhatsApp Image 2025-12-04 at 01.33.11_5a6d138f.jpg"
+                src="WhatsApp Image 2025-12-04 at 01.33.11_5a6d138f.webp"
                 alt="Irene Ajabu – Office Administrator at Musyoka & Mutinda Company Advocates"
               />
             </div>
@@ -604,7 +604,7 @@
           <div class="team-member" id="christine-kamuvya">
             <div class="member-image">
               <img
-                src="WhatsApp Image 2025-12-03 at 20.41.14_2b52efc3.jpg"
+                src="WhatsApp Image 2025-12-03 at 20.41.14_2b52efc3.webp"
                alt="Christine Kamuvya – Office Administrator at Musyoka & Mutinda Company Advocates"
               />
             </div>
@@ -713,7 +713,7 @@
           <div class="footer-about">
             <a href="/" class="footer-logo">
               <img
-                src="final logo.png"
+                src="final logo.webp"
                 alt="Musyoka & Mutinda Advocates Logo"
               />
             </a>
@@ -788,7 +788,7 @@
         </div>
         <div class="copyright">
           <p>
-            &copy; 2025 Musyoka & Mutinda Company Advocates. All Rights
+            &copy; 2026 Musyoka & Mutinda Company Advocates. All Rights
             Reserved.
           </p>
           <p class="credit">
